# pi-desktop-dev

./: .gitignore  README.md  findings.md  index.html  integration-spec.md  package-lock.json  package.json  plan.md  progress.md  task_plan.md  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  pi_config.rs
src-tauri/src/pibridge/: discovery.rs  jsonl.rs  mod.rs  process.rs  protocol.rs  session.rs
src/components/: ActivityBar.tsx  AppLayout.tsx  ChatWindow.tsx  MessageBubble.tsx  PiStatusBar.tsx  SettingsPanel.tsx  Sidebar.tsx  icons.tsx
src/data/: builtin-providers.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  ja.ts  zh-CN.ts  zh-TW.ts
src/lib/: utils.ts
src/pages/: DashboardPage.tsx  MemoryPage.tsx  SessionsPage.tsx  SettingsPage.tsx
src/services/: piBridge.ts  piConfigService.ts
src/stores/: appStore.ts  piConfigStore.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: optimizeInput.ts
src/utils/__tests__/: optimizeInput.test.ts
